# auto-maker

./: README.md  RedditBot.py  app.py  backup_generator.py  config.json  flask_app.py  main.app.py  main.py  main.py.bak2  meme_generator.py  models.py  pyproject.toml  run.py  run_flask.py  scheduler.py  web_app.py
attached_assets/: README.md  RedditBot.py  main.py
docs/: API.md  Arquitetura.md  Configuracao.md  Exemplos_Uso.md  Instalacao.md  README.md  Solucao_Problemas.md
templates/: index.html
